--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,7 @@ services:
       - POSTGRES_DB=flaskapp2
     ports:
       - "5432:5432"
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
